[package]
name = "listenbrainz-mpd"
version = "2.2.0"
edition = "2021"
description = "ListenBrainz submission client for MPD"
license = "AGPL-3.0-only"
keywords = ["mpd", "listenbrainz", "musicbrainz", "scrobbling", "scrobbler"]
categories = ["command-line-utilities", "multimedia::audio"]
repository = "https://codeberg.org/elomatreb/listenbrainz-mpd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
clap = { version = "4.3.10", features = ["cargo", "derive"] }
dirs = "5.0.1"
mpd_client = "1.2.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["json"] }
rusqlite = "0.29.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.99", features = ["raw_value"] }
tokio = { version = "1.29.1", features = [
    "rt",
    "net",
    "time",
    "macros",
    "sync",
] }
tokio-stream = "0.1.14"
toml = "0.7.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
