[package]
name = "listenbrainz-mpd"
version = "2.2.0"
edition = "2021"
description = "ListenBrainz submission client for MPD"
license = "AGPL-3.0-only"
keywords = ["mpd", "listenbrainz", "musicbrainz", "scrobbling", "scrobbler"]
categories = ["command-line-utilities", "multimedia::audio"]
repository = "https://codeberg.org/elomatreb/listenbrainz-mpd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["cargo", "derive"] }
dirs = "5.0.1"
mpd_client = "1.2.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json"] }
rusqlite = "0.29.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
tokio = { version = "1.33.0", features = [
    "rt",
    "net",
    "time",
    "macros",
    "sync",
] }
tokio-stream = "0.1.14"
toml = "0.8.6"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
