[package]
name = "listenbrainz-mpd"
version = "2.3.2"
edition = "2021"
description = "ListenBrainz submission client for MPD"
license = "AGPL-3.0-only"
keywords = ["mpd", "listenbrainz", "musicbrainz", "scrobbling", "scrobbler"]
categories = ["command-line-utilities", "multimedia::audio"]
repository = "https://codeberg.org/elomatreb/listenbrainz-mpd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enable native TLS for reqwest by default (would otherwise be disabled below).
default = ["reqwest/native-tls"]

# Generate shell completion files for certain shells
shell_completion = ["dep:clap_complete", "dep:clap"]

# Enable systemd-specific features (does nothing on non-Linux)
systemd = ["dep:sd-notify"]

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["cargo", "derive"] }
dirs = "5.0.1"
mpd_client = "1.3.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json"], default-features = false }
rusqlite = "0.30.0"
sd-notify = { version = "0.4.1", optional = true }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["raw_value"] }
tokio = { version = "1.33.0", features = [
    "rt",
    "net",
    "time",
    "macros",
    "signal",
    "sync",
] }
tokio-stream = "0.1.14"
toml = "0.8.6"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
clap = { version = "4.4.7", features = ["cargo", "derive"], optional = true }
clap_complete = { version = "4.4.4", optional = true }
